# snet-upgradeable-owners-minting-policy

./: .gitignore  README.md  cabal.project  mstoken.cabal  shell.nix
scripts/: nft.json  nft_unapplied.json  token.json  token_unapplied.json  validator.json  validator_unapplied.json
src/: Main.hs  NFT.hs  ScriptUtils.hs  Serializer.hs  TestSerializer.hs  Token.hs  Validator.hs
tests/: README.MD  nft.uplc  nft_off.uplc  offchain.ts  package-lock.json  package.json  tsconfig.json
