name:                snet-upgradeable-owners-minting-policy
version:             1.0
author:              SNET
maintainer:          anastasia.martynyuk@singularitynet.io
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
    import:           common-all
    hs-source-dirs:   ./src
    exposed-modules:    NFT
                      , Token
                      , Validator
    build-depends:      base >=4.7 && <5
                      , aeson
                      , bytestring
                      , directory
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , containers
                      , text
                      , plutus-ledger              >=1.1.0
                      , plutus-ledger-constraints  >=1.1.0
                      , plutus-script-utils        >=1.1.0
                      , cardano-api                >= 1.35.4
                      , serialise  
                      , base16-bytestring
  default-language:    Haskell2010

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable create-token
  import:              lang
  main-is:             Serializer.hs
  hs-source-dirs:      ./src
  build-depends:      base >=4.7 && <5
                      , aeson
                      , bytestring
                      , directory
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , containers
                      , text
                      , plutus-ledger              >=1.1.0
                      , plutus-ledger-constraints  >=1.1.0
                      , plutus-script-utils        >=1.1.0
                      , cardano-api                >= 1.35.4
                      , serialise  
                      , base16-bytestring